Fixed revision number for KDL. Will update when new features are released in KDL.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@2906 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/kdl/Makefile
+++ b/3rdparty/kdl/Makefile
@@ -2,7 +2,7 @@ all: build
 
 SVN_DIR = kdl-svn
 SVN_URL = http://svn.mech.kuleuven.be/repos/orocos/trunk/kdl
-SVN_REVISION = 
+SVN_REVISION =  -r 29471
 SVN_PATCH = kdl_patch.diff
 include $(shell rospack find mk)/svn_checkout.mk
 
