--- a/controllers/generic_controllers/CMakeLists.txt
+++ b/controllers/generic_controllers/CMakeLists.txt
@@ -3,4 +3,4 @@ include(rosbuild)
 rospack(generic_controllers)
 genmsg()
 gensrv()
-rospack_add_library(generic_controllers src/pid.cpp src/joint_position_controller.cpp src/joint_velocity_controller.cpp)
+rospack_add_library(generic_controllers src/pid.cpp src/joint_effort_controller.cpp src/joint_position_controller.cpp src/joint_velocity_controller.cpp)
