--- a/nav/fake_localization/CMakeLists.txt
+++ b/nav/fake_localization/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
-rospack(odom_localization)
-rospack_add_executable(odom_localization odom_localization.cpp)
+rospack(fake_localization)
+rospack_add_executable(fake_localization fake_localization.cpp)
