--- a/robot_descriptions/gazebo_robot_description/CMakeLists.txt
+++ b/robot_descriptions/gazebo_robot_description/CMakeLists.txt
@@ -18,10 +18,16 @@ add_custom_target(pr2_gazebo_model ALL
 		  DEPENDS urdf2gazebo
 		  COMMENT "Building Gazebo model for PR2")
 
-add_custom_target(pr2_gazebo_model_nolimit ALL
-		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_nolimit.model 1
+add_custom_target(pr2_gazebo_model_nolimit_rosgazebo ALL
+		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2_rosgazebo.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_nolimit.model 1
 		  DEPENDS urdf2gazebo
 		  COMMENT "Building Gazebo model for PR2")
+
+add_custom_target(pr2_gazebo_model_rosgazebo ALL
+		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2_rosgazebo.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_rosgazebo.model
+		  DEPENDS urdf2gazebo
+		  COMMENT "Building Gazebo model for PR2")
+
 add_custom_target(pr2_gazebo_model_test ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2_test.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_test.model
 		  DEPENDS urdf2gazebo
