--- a/pr2_msgs/Makefile
+++ b/pr2_msgs/Makefile
@@ -1,4 +1,1 @@
-all: gen_msgs
-clean: clean_msgs
-	-rm -rf src/std_msgs
-include $(shell rospack find mk)/msg.mk
+include $(shell rospack find mk)/cmake.mk
