switched pr2 and robot to cmake
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3011 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/pr2_srvs/Makefile
+++ b/pr2_srvs/Makefile
@@ -1,4 +1,1 @@
-all:
-	`rospack find rostools`/scripts/gensrv srv/*.srv
-clean: 
-	-rm -rf srv/cpp src/std_srvs
+include $(shell rospack find mk)/cmake.mk
