--- a/robot_srvs/Makefile
+++ b/robot_srvs/Makefile
@@ -1,4 +1,1 @@
-all:
-	`rospack find rostools`/scripts/gensrv srv/*.srv
-clean: 
-	-rm -rf srv/cpp src/std_srvs
+include $(shell rospack find mk)/cmake.mk
