locked ffmpeg to a known working revision
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3059 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/ffmpeg/Makefile
+++ b/3rdparty/ffmpeg/Makefile
@@ -2,7 +2,7 @@ all: build
 
 SVN_DIR = ffmpeg-latest
 SVN_URL = svn://svn.mplayerhq.hu/ffmpeg/trunk 
-SVN_REVISION =
+SVN_REVISION = -r 14758
 include $(shell rospack find mk)/svn_checkout.mk
 
 build: SVN_UP ffmpeg
