--- a/3rdparty/newmat10/Makefile
+++ b/3rdparty/newmat10/Makefile
@@ -10,6 +10,7 @@ newmat/newmat10: newmat/newmat_1.10.4/newmat10.tar.gz
 	cd newmat/newmat_1.10.4 && tar xzf newmat10.tar.gz
 	cd newmat/newmat_1.10.4 && patch -p1 <../../newmat_1.10.4-2build1.diff
 	cd newmat/newmat_1.10.4 && patch -p1 <../../fPIC.diff
+	cd newmat/newmat_1.10.4 && patch -p0 <../../warnings.diff
 	cd newmat/newmat_1.10.4 && touch config.h
 	cd newmat/newmat_1.10.4 && make -f nm_gnu.mak
 	cp -r newmat/newmat_1.10.4 newmat/newmat10
