updated to new gazebo. ros camera get vfov function is not working in current gazebo, will find out why, non critical.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3103 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/gazebo/Makefile
+++ b/3rdparty/gazebo/Makefile
@@ -2,7 +2,7 @@ all: build
 
 SVN_DIR = gazebo-svn
 SVN_URL = https://playerstage.svn.sourceforge.net/svnroot/playerstage/code/gazebo/trunk
-SVN_REVISION = -r 6915 #revision with wall extrusion working, Ogre camera save frame (TP)
+SVN_REVISION = -r 6952 #more updates on geometry creation
 SVN_PATCH = gazebo_patch.diff
 include $(shell rospack find mk)/svn_checkout.mk
 
