attempt to properly handle when gazebo updates happen.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3115 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/gazebo/Makefile
+++ b/3rdparty/gazebo/Makefile
@@ -15,7 +15,7 @@ FI_LD = $(shell rospack find freeimage)/freeimage/lib
 ROOT = $(shell rospack find gazebo)/gazebo
 TESTROOT = $(shell rospack find gazebo)/test-gazebo
 
-build: SVN_UP gazebo
+build: SVN_UP_REVERT_PATCH gazebo
 
 .PHONY: gazebo
 gazebo: $(SVN_DIR)
