--- a/visualization/scene_labeler/CMakeLists.txt
+++ b/visualization/scene_labeler/CMakeLists.txt
@@ -4,6 +4,8 @@ rospack(scene_labeler)
 add_definitions(-Wall)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 rospack_add_executable(scene_labeler src/scene_labeler/scene_labeler.cpp)
+rospack_add_executable(smallv_transformer src/smallv_transformer/smallv_transformer.cpp)
 rospack_add_executable(image_bg_subtr src/image_bg_subtr/CaptureObjects.cpp src/image_bg_subtr/cvx_multiwin.cpp src/image_bg_subtr/cv_yuv_codebook.cpp)
+rospack_add_executable(image_bg_subtr_multi src/image_bg_subtr/CaptureObjectsMulti.cpp src/image_bg_subtr/cvx_multiwin.cpp src/image_bg_subtr/cv_yuv_codebook.cpp)
 set_target_properties(scene_labeler PROPERTIES LINK_FLAGS "-g" COMPILE_FLAGS "-g")
 
