--- a/robot_descriptions/wg_robot_description_parser/CMakeLists.txt
+++ b/robot_descriptions/wg_robot_description_parser/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(wg_robot_description_parser)
+
+set(ROS_COMPILE_FLAGS "-W -Wall -Wextra")
+
 rospack_add_library(URDF src/urdf/URDF.cpp)
 rospack_add_executable(parse src/urdf/parse.cpp)
 target_link_libraries(parse URDF)
