Moving cv_view things around.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3164 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/vision/cv_view/stereo/Makefile
+++ b/vision/cv_view/stereo/Makefile
@@ -1,4 +1,4 @@
-SRC = cv_view.cpp 
-OUT = cv_view
+SRC = cv_view_array.cpp 
+OUT = cv_view_array
 PKG = cv_view
 include $(shell rospack find mk)/node.mk
