--- a/vision/cv_view/Makefile
+++ b/vision/cv_view/Makefile
@@ -1,4 +1,1 @@
-SRC = cv_view.cpp 
-OUT = cv_view
-PKG = cv_view
-include $(shell rospack find mk)/node.mk
+include $(shell rospack find mk)/cmake.mk
