New version of base_controller in new controller infrastructure. Loads all required data from pr2.xml
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3190 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/controllers/pr2_controllers/CMakeLists.txt
+++ b/controllers/pr2_controllers/CMakeLists.txt
@@ -3,4 +3,4 @@ include(rosbuild)
 rospack(pr2_controllers)
 genmsg()
 gensrv()
-rospack_add_library(pr2_controllers src/laser_scanner_controller.cpp)
+rospack_add_library(pr2_controllers src/base_controller.cpp src/laser_scanner_controller.cpp)
