Pending from over a week ago: * pick up boost libs from ROS * added 'svn-all' target which does 'svn co' instead of 'wget tarball'.
===> hard to test on my system, which has boost, and BuildBot seems to
     not complain about it anymore, either... weird.


git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3227 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/estar/Makefile
+++ b/3rdparty/estar/Makefile
@@ -7,8 +7,13 @@
 # Or, to replace an existing build, do e.g.:
 #
 #  $ make VERSION=0.2 rebuild
+#
+# It is also possible to use svn checkout to get the sources, in case
+# you need the bleeding edge. This is done using:
+#
+#  $ make svn-all
 
-all: really-all
+all: tarball-all
 
 VERSION=     r267
 
@@ -18,12 +23,26 @@ SOURCE_DIR=  $(PWD)/estar-$(VERSION)
 UNPACK_CMD=  tar xfz
 BUILD_DIR=   $(PWD)/build
 INST_DIR=    $(PWD)/local
+BOOST_DIR=   `rospack --cflags-only-I boost`
+
+SVN_DIR=     $(PWD)/estar-svn
+SVN_REV=     HEAD
+SVN_URL=     https://estar.svn.sourceforge.net/svnroot/estar/trunk/estar
 
 include $(shell rospack find mk)/download_unpack.mk
 
 .PHONY: reall-all
-really-all: $(SOURCE_DIR) $(SOURCE_DIR)/configure $(BUILD_DIR)/config.h
+really-all: $(SOURCE_DIR)/configure $(BUILD_DIR)/config.h
 	$(MAKE) -C $(BUILD_DIR) install
+
+.PHONY: svn-all
+svn-all:
+	test -d $(SVN_DIR) || svn co -r$(SVN_REV) $(SVN_URL) $(SVN_DIR)
+	$(MAKE) SOURCE_DIR=$(SVN_DIR) really-all
+
+.PHONY: tarball-all
+tarball-all: $(SOURCE_DIR)
+	$(MAKE) really-all
 
 rebuild: wipe really-all
 
@@ -32,7 +51,8 @@ $(SOURCE_DIR)/configure: $(SOURCE_DIR)/configure.ac $(SOURCE_DIR)/bootstrap-buil
 
 $(BUILD_DIR)/config.h: $(SOURCE_DIR)/configure $(SOURCE_DIR)/config.h.in
 	test -d $(BUILD_DIR) || mkdir -p $(BUILD_DIR)
-	cd $(BUILD_DIR) && $(SOURCE_DIR)/configure --prefix=$(INST_DIR)
+	cd $(BUILD_DIR) && $(SOURCE_DIR)/configure --prefix=$(INST_DIR) \
+                                                   --with-boost=$(BOOST_DIR)
 
 clean:
 	$(MAKE) -C $(BUILD_DIR) clean
