--- a/util/rosTF/CMakeLists.txt
+++ b/util/rosTF/CMakeLists.txt
@@ -12,5 +12,5 @@ target_link_libraries(testClient rosTF)
 rospack_add_executable(frameServer src/frameServer.cc)
 target_link_libraries(frameServer rosTF)
 
-rospack_add_executable(viewTF src/viewTF.cpp)
-target_link_libraries(viewTF rosTF)
+#rospack_add_executable(viewTF src/viewTF.cpp)
+#target_link_libraries(viewTF rosTF)
