--- a/drivers/cam/dc1394_cam_server/CMakeLists.txt
+++ b/drivers/cam/dc1394_cam_server/CMakeLists.txt
@@ -5,3 +5,4 @@ rospack(dc1394_cam_server)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
 rospack_add_executable(dc1394_cam_server src/dc1394_cam_server/dc1394_cam_server.cpp)
+rospack_add_executable(check_params src/check_params/check_params.cpp)
