--- a/3rdparty/newmat10/Makefile
+++ b/3rdparty/newmat10/Makefile
@@ -6,7 +6,7 @@ newmat/newmat_1.10.4/newmat10.tar.gz:
 
 download: newmat/newmat_1.10.4/newmat10.tar.gz
 
-newmat/newmat10: newmat/newmat_1.10.4/newmat10.tar.gz
+newmat/newmat10: newmat/newmat_1.10.4/newmat10.tar.gz newmat_1.10.4-2build1.diff fPIC.diff warnings.diff
 	cd newmat/newmat_1.10.4 && tar xzf newmat10.tar.gz
 	cd newmat/newmat_1.10.4 && patch -p1 <../../newmat_1.10.4-2build1.diff
 	cd newmat/newmat_1.10.4 && patch -p1 <../../fPIC.diff
