--- a/vision/scan_utils/CMakeLists.txt
+++ b/vision/scan_utils/CMakeLists.txt
@@ -3,8 +3,9 @@ include(rosbuild)
 rospack(scan_utils)
 add_definitions(-Wall)
 genmsg()
-rospack_add_library(scanutils src/smartScan.cpp src/dataTypes.cpp)
+rospack_add_library(scanutils src/smartScan.cpp src/dataTypes.cpp src/intersection_triangle.cpp src/intersection_obb.cpp src/intersection_sphere.cpp)
 rospack_add_library(listennode src/listen_node/scanListenNode.cpp src/listen_node/rosSystemCalls.cpp)
 
 rospack_add_gtest(testOctree test/testOctree.cpp)
+target_link_libraries(testOctree scanutils)
 set_target_properties(testOctree PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
