Added ROS node that converts incoming point clouds to octrees and broadcasts the octrees.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3336 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/vision/scan_utils/CMakeLists.txt
+++ b/vision/scan_utils/CMakeLists.txt
@@ -6,6 +6,9 @@ genmsg()
 rospack_add_library(scanutils src/smartScan.cpp src/dataTypes.cpp src/intersection_triangle.cpp src/intersection_obb.cpp src/intersection_sphere.cpp)
 rospack_add_library(listennode src/listen_node/scanListenNode.cpp src/listen_node/rosSystemCalls.cpp)
 
+rospack_add_executable(cloudToOctree src/cloudToOctree/cloudToOctree.cpp)
+target_link_libraries(cloudToOctree scanutils)
+
 rospack_add_gtest(testOctree test/testOctree.cpp)
 target_link_libraries(testOctree scanutils)
 set_target_properties(testOctree PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
