added test to make sure pr2 xml files are correct
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3353 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/robot_descriptions/wg_robot_description/CMakeLists.txt
+++ b/robot_descriptions/wg_robot_description/CMakeLists.txt
@@ -1,3 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(wg_robot_description)
+
+rospack_add_gtest(test_update test/test_update.cpp)
