Added options for all visualizers that were missing them... Axes, Laser Scan, Point Cloud
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3370 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/visualization/ogre_visualizer/CMakeLists.txt
+++ b/visualization/ogre_visualizer/CMakeLists.txt
@@ -15,6 +15,7 @@ include_directories( ${wxWidgets_INCLUDE_DIRS} )
 rospack_add_library(ogrevisualizer src/ogre_visualizer/visualization_panel.cpp
 				   												 src/ogre_visualizer/visualizer_base.cpp
                                    src/ogre_visualizer/common.cpp
+                                   src/ogre_visualizer/ros_topic_property.cpp
                                    src/ogre_visualizer/visualizers/marker_visualizer.cpp
                                    src/ogre_visualizer/visualizers/axes_visualizer.cpp
 				   												 src/ogre_visualizer/visualizers/grid_visualizer.cpp
