--- a/drivers/cam/elphel_cam/src/Makefile
+++ b/drivers/cam/elphel_cam/src/Makefile
@@ -1,2 +1,2 @@
-SUBDIRS = libelphel_cam blob_tracker blob_tracker_node elphel_node blob_tracker_node_test
+SUBDIRS = libelphel_cam   
 include $(shell rospack find mk)/recurse_subdirs.mk
