--- a/3rdparty/estar/Makefile
+++ b/3rdparty/estar/Makefile
@@ -36,9 +36,14 @@ really-all: $(SOURCE_DIR)/configure $(BUILD_DIR)/config.h
 	$(MAKE) -C $(BUILD_DIR) install
 
 .PHONY: svn-all
-svn-all:
-	test -d $(SVN_DIR) || svn co -r$(SVN_REV) $(SVN_URL) $(SVN_DIR)
+svn-all: checkout
 	$(MAKE) SOURCE_DIR=$(SVN_DIR) really-all
+
+checkout:
+	test -d $(SVN_DIR) || svn co -r$(SVN_REV) $(SVN_URL) $(SVN_DIR)
+
+update: checkout
+	test -d $(SVN_DIR) && svn up $(SVN_DIR)
 
 .PHONY: tarball-all
 tarball-all: $(SOURCE_DIR)
