(temporarily) disabled E* support in nepumuk (pending feature change, not needed right now)
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3423 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/simulators/nepumuk/Makefile
+++ b/simulators/nepumuk/Makefile
@@ -68,12 +68,12 @@ symlinks:
 $(SOURCE_DIR)/configure: $(SOURCE_DIR)/configure.ac $(SOURCE_DIR)/bootstrap-buildsystem.sh
 	cd $(SOURCE_DIR) && ./bootstrap-buildsystem.sh
 
+## --with-estar=$(ESTAR_DIR)
 $(BUILD_DIR)/config.h: $(SOURCE_DIR)/configure $(SOURCE_DIR)/config.h.in
 	test -d $(BUILD_DIR) || mkdir -p $(BUILD_DIR)
 	cd $(BUILD_DIR) && $(SOURCE_DIR)/configure --prefix=$(INST_DIR) \
                                                    --enable-ros \
                                                    --with-sfl=$(SFL_DIR) \
-                                                   --with-estar=$(ESTAR_DIR) \
                                                    --with-boost=$(BOOST_DIR)
 
 clean:
