--- a/robot_descriptions/wg_robot_description_parser/CMakeLists.txt
+++ b/robot_descriptions/wg_robot_description_parser/CMakeLists.txt
@@ -2,9 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(wg_robot_description_parser)
 
-set(ROS_COMPILE_FLAGS "-W -Wall -Wextra")
-
 rospack_add_library(URDF src/URDF.cpp src/parser.cpp)
+rospack_add_compile_flags(URDF -Wextra)
 
 rospack_add_executable(parse src/parse.cpp)
 target_link_libraries(parse URDF)
