Octree collision spaces appear to be correct but rather slow
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3492 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/motion_planning/collision_space/CMakeLists.txt
+++ b/motion_planning/collision_space/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(collision_space)
 rospack_add_library(collision_space src/collision_space/environment.cpp
-#				    src/collision_space/environmentOctree.cpp
+				    src/collision_space/environmentOctree.cpp
 				    src/collision_space/environmentODE.cpp)	
 
 # Unit tests
