adding libTF unit test and updating pose3d unit test
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3496 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/util/libTF/CMakeLists.txt
+++ b/util/libTF/CMakeLists.txt
@@ -15,3 +15,5 @@ rospack_add_executable(testMatrixQuaternion src/test/testMatrixQuaternion.cc)
 target_link_libraries(testMatrixQuaternion TF)
 rospack_add_gtest(pose3d_unittest test/pose3d_unittest.cpp src/Pose3D.cpp)
 target_link_libraries(pose3d_unittest TF)
+rospack_add_gtest(libTF_unittest test/libTF_unittest.cpp)
+target_link_libraries(libTF_unittest TF)
