Added PCA capability
Final documentation tweaks.



git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3511 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/grasp_module/grasp_learner/CMakeLists.txt
+++ b/grasp_module/grasp_learner/CMakeLists.txt
@@ -5,4 +5,6 @@ genmsg()
 add_definitions(-Wall)
 rospack_add_executable(voxelizer src/scan_voxelizer.cpp)
 rospack_add_executable(voxel_processor src/voxel_processor.cpp)
+target_link_libraries(voxel_processor blas)
+target_link_libraries(voxel_processor lapack)
 
