--- a/robot_descriptions/gazebo_robot_description/CMakeLists.txt
+++ b/robot_descriptions/gazebo_robot_description/CMakeLists.txt
@@ -16,20 +16,25 @@ message(${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml.model)
 add_custom_target(pr2_gazebo_model ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml.model
 		  DEPENDS urdf2gazebo
-		  COMMENT "Building Gazebo model for PR2")
+		  COMMENT "Building Gazebo model for PR2 Standard Model")
 
 add_custom_target(pr2_gazebo_model_nolimit_rosgazebo ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2_rosgazebo.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_nolimit.model 1
 		  DEPENDS urdf2gazebo
-		  COMMENT "Building Gazebo model for PR2")
+		  COMMENT "Building Gazebo model for PR2 Rosgazebo Model without Joint Limits for Kinematics")
 
 add_custom_target(pr2_gazebo_model_rosgazebo ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2_rosgazebo.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_rosgazebo.model
 		  DEPENDS urdf2gazebo
-		  COMMENT "Building Gazebo model for PR2")
+		  COMMENT "Building Gazebo model for PR2 Rosgazebo Model")
 
 add_custom_target(pr2_gazebo_model_test ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/pr2_test.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_test.model
 		  DEPENDS urdf2gazebo
-		  COMMENT "Building Gazebo model for PR2")
+		  COMMENT "Building Gazebo model for PR2 Test Actuators")
+
+add_custom_target(pr2_gazebo_model_arm_test ALL
+		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2_arm_test/pr2_arm_test.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_arm_test.model
+		  DEPENDS urdf2gazebo
+		  COMMENT "Building Gazebo model for PR2 Arm Test")
 
