updated laser scanner controller in CmakeLists.txt. added getMeasuredPosition() call for the node.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3515 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/controllers/pr2_controllers/CMakeLists.txt
+++ b/controllers/pr2_controllers/CMakeLists.txt
@@ -3,6 +3,6 @@ include(rosbuild)
 rospack(pr2_controllers)
 genmsg()
 gensrv()
-rospack_add_library(pr2_controllers src/base_controller.cpp)
+rospack_add_library(pr2_controllers src/base_controller.cpp src/laser_scanner_controller.cpp)
 rospack_add_executable(testBaseController test/test_base_controller.cpp)
 target_link_libraries(testBaseController pr2_controllers)
