Cleaned up with new advertise/subscibe APIs, added a simple hztest
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3537 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/simulators/rosstage/CMakeLists.txt
+++ b/simulators/rosstage/CMakeLists.txt
@@ -2,3 +2,5 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(rosstage)
 rospack_add_executable(rosstage rosstage.cc)
+
+rospack_add_rostest(test/hztest.xml)
