Added link of shared lib to wx
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3562 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/visualization/wx_topic_display/CMakeLists.txt
+++ b/visualization/wx_topic_display/CMakeLists.txt
@@ -30,6 +30,7 @@ include_directories(${PROJECT_SOURCE_DIR}/src)
 rospack_add_library(wxtopicdisplay src/wx_topic_display/TopicDisplay.cpp
                                    src/wx_topic_display/GenTopicDisplay.cpp
 				   src/wx_topic_display/TopicDisplayDialog.cpp)
+target_link_libraries(wxtopicdisplay ${wxWidgets_LIBRARIES})
 
 rospack_add_executable(simpletest src/test/test.cpp
                             src/test/GenTestTopicDisplay.cpp)
