Updated kdl to the latest release.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3575 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/kdl/Makefile
+++ b/3rdparty/kdl/Makefile
@@ -2,8 +2,8 @@ all: build
 
 SVN_DIR = kdl-svn
 SVN_URL = http://svn.mech.kuleuven.be/repos/orocos/trunk/kdl
-SVN_REVISION =  -r 29471
-SVN_PATCH = kdl_patch.diff
+SVN_REVISION =  -r 29562
+SVN_PATCH = kdl_patch29562.diff
 include $(shell rospack find mk)/svn_checkout.mk
 
 CMAKE = `rospack find cmake`/cmake/bin/cmake 
