* update gazebo to new revision (major patch rework).  * update opende to new revision (no major changes).  * udpate camera and laser plugins corresponding to new gazebo revision.  * updates to controller effort limits for pr2_test.xml.  * removed torso joint from arm test case.  * added services from Advait's grasp utilities.  Though not yet implemented in the arm controller or anywhere else.  * update to gazebo world files for <grid> tag, now use "false" instead of "off".  * 3rdparty/gazebo/patches/camera_saveframe_tony.diff is new, but not yet implemented into gazebo, so camera test will not work yet.  * removed map-elem tags from controllers.xml, they are now in gazebo_joints.xml because they are gazebo specific.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3601 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/drivers/simulator/gazebo_plugin/CMakeLists.txt
+++ b/drivers/simulator/gazebo_plugin/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(gazebo_plugin)
+genmsg()
+include_directories(msg/cpp)
+gensrv()
+include_directories(srv/cpp)
+
 add_definitions(-Wall)
 rospack_add_library(Pr2_Actarray src/Pr2_Actarray.cc)
 rospack_add_library(Pr2_Gripper src/Pr2_Gripper.cc)
