Reorganizing the boosting classifier code.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3617 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/vision/dorylus/CMakeLists.txt
+++ b/vision/dorylus/CMakeLists.txt
@@ -2,6 +2,5 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(dorylus)
 add_definitions(-Wall)
-rospack_add_executable(dorylus src/dorylus.cpp)
-rospack_add_executable(dorylus_node src/dorylus_node.cpp)
+rospack_add_executable(dorylus_node src/dorylus_node.cpp src/dorylus.cpp)
 
