--- a/3rdparty/libdc1394v2/Makefile
+++ b/3rdparty/libdc1394v2/Makefile
@@ -3,7 +3,7 @@ all: build
 SVN_DIR = libdc1394v2-svn
 SVN_URL = https://libdc1394.svn.sourceforge.net/svnroot/libdc1394/trunk/libdc1394
 SVN_REVISION =
-SVN_PATCH = total_fix.patch
+SVN_PATCH = conversions_fix.patch videre_fix.patch
 include $(shell rospack find mk)/svn_checkout.mk
 
 build: SVN_UP libdc1394v2
