Fix clean to delete the propgrid version's Makefile, which will force a configure
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3645 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/wxpropgrid/Makefile
+++ b/3rdparty/wxpropgrid/Makefile
@@ -16,7 +16,8 @@ propgrid: $(VERSION)
 
 clean:
 	cd $(VERSION) && \
-		make clean
+		make clean && \
+		rm -f Makefile
 	rm -rf propgrid_install
 
 wipe: clean
