fixed freeimage pkg-config bug.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3740 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/gazebo/Makefile
+++ b/3rdparty/gazebo/Makefile
@@ -9,7 +9,7 @@ include $(shell rospack find mk)/svn_checkout.mk
 
 OGRE_PKG = $(shell rospack find ogre)/ogre/lib/pkgconfig
 PLAYER_PKG = $(shell rospack find player)/player/lib/pkgconfig
-FI_PKG = $(shell rospack find freeimage)
+FI_PKG = $(shell rospack find freeimage)/freeimage/lib/pkgconfig
 ODE_PKG = $(shell rospack find opende)/opende/lib/pkgconfig
 
 ODE_PATH = $(shell rospack find opende)/opende/bin
