updates to use -Wl and rpath in ogre. clean up setup.bash for gazebo launch script.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3750 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/ogre/Makefile
+++ b/3rdparty/ogre/Makefile
@@ -67,6 +67,9 @@ ogre/lib/pkgconfig/OGRE.pc: $(OGRE_VERSION)/Makefile
 	  cd $(ROOT)/$(OGRE_VERSION) && make $(JOBC); \
 	  cd $(ROOT)/$(OGRE_VERSION) && make install; \
 	fi
+	@echo "patch OGRE.pc to pass -Wl,-rpath,-L{libdir}"
+	-mv ogre/lib/pkgconfig/OGRE.pc ogre/lib/pkgconfig/OGRE.bak
+	sed 's%Libs: -L$${libdir} -lOgreMain%Libs: -Wl,-rpath,$${libdir}:$${libdir}/OGRE -L$${libdir} -lOgreMain%g' ogre/lib/pkgconfig/OGRE.bak > ogre/lib/pkgconfig/OGRE.pc
 	@echo "done"
 
 .PHONY: clean wipe
