Removed gtest from manifests.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3751 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/world_models/map_server/CMakeLists.txt
+++ b/world_models/map_server/CMakeLists.txt
@@ -7,6 +7,7 @@ set_target_properties(utest PROPERTIES
                       RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
 
 rospack_add_executable(rtest test/rtest.cpp test/test_constants.cpp)
+rospack_add_gtest_build_flags(rtest)
 set_target_properties(rtest PROPERTIES
                       RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
 
