added dependency from configured to the Makefile, so that configuration happens if, for example, the SVN revision mentioned in the Makefile is changed
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3777 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/gmapping/Makefile
+++ b/3rdparty/gmapping/Makefile
@@ -8,7 +8,7 @@ include $(shell rospack find mk)/svn_checkout.mk
 
 build: SVN_UP gmapping
 
-configured: $(SVN_DIR)
+configured: $(SVN_DIR) Makefile
 	cd $(SVN_DIR) && ./configure
 	touch configured
 
