--- a/3rdparty/libdc1394v2/Makefile
+++ b/3rdparty/libdc1394v2/Makefile
@@ -8,7 +8,7 @@ include $(shell rospack find mk)/svn_checkout.mk
 
 build: SVN_UP libdc1394v2
 
-configured: $(SVN_DIR)
+configured: $(SVN_DIR) Makefile
 	cd $(SVN_DIR) && autoreconf -i -s
 	cd $(SVN_DIR) && ./configure --prefix=$(PWD)/libdc1394v2 --enable-shared=no
 	touch configured
