--- a/3rdparty/xenomai/Makefile
+++ b/3rdparty/xenomai/Makefile
@@ -9,7 +9,7 @@ include $(shell rospack find mk)/svn_checkout.mk
 
 build: SVN_UP xenomai
 
-configured: $(SVN_DIR) linux
+configured: $(SVN_DIR) linux Makefile
 	cd $(SVN_DIR) && mkdir -p build && cd build && ../configure --prefix=$(PWD)/xenomai --enable-x86-sep
 	cd $(SVN_DIR) && \
 	./scripts/prepare-kernel.sh --linux=../linux --arch=i386 \
