switched to use REVERT_PATCH
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3805 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/kdl/Makefile
+++ b/3rdparty/kdl/Makefile
@@ -11,7 +11,7 @@ CMAKE_ARGS = -DCMAKE_INSTALL_PREFIX=$(PWD)/kdl/ \
 		-DPYTHON_BINDINGS=ON \
 		-DKDL_PYTHON_INSTALL_PATH=$(PWD)/kdl/lib/
 
-build: SVN_UP kdl
+build: SVN_UP_REVERT_PATCH kdl
 
 configured: $(SVN_DIR) Makefile
 	mkdir -p $(SVN_DIR)/build
