test case for timothy with partial arm.  watchout, ixx are way wrong.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3820 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/robot_descriptions/gazebo_robot_description/CMakeLists.txt
+++ b/robot_descriptions/gazebo_robot_description/CMakeLists.txt
@@ -38,6 +38,11 @@ add_custom_target(pr2_gazebo_model_arm_test ALL
 		  DEPENDS urdf2gazebo
 		  COMMENT "Building Gazebo model for PR2 Arm Test")
 
+add_custom_target(pr2_gazebo_model_arm_test_tjh ALL
+		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2_arm_test_tjh/pr2_arm_test_tjh.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_arm_test_tjh.model
+		  DEPENDS urdf2gazebo
+		  COMMENT "Building Gazebo model for PR2 Arm Test")
+
 add_custom_target(pr2_gazebo_model_single_link ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/single_link_test/pr2_single_link.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_single_link.model
 		  DEPENDS urdf2gazebo
