--- a/exec_trex/grasp.0.cfg
+++ b/exec_trex/grasp.0.cfg
@@ -1,2 +1,3 @@
 <!-- Configuration for cleaning test case -->
+<!--Agent name="grasp.0" finalTick="2000" config="pr2.cfg" playback="1"/-->
 <Agent name="grasp.0" finalTick="2000" config="pr2.cfg"/>
