Added planning visualizer, that should take over from Ioan's planning_world_viewer app.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3880 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/visualization/ogre_visualizer/CMakeLists.txt
+++ b/visualization/ogre_visualizer/CMakeLists.txt
@@ -24,13 +24,14 @@ rospack_add_library(ogrevisualizer src/ogre_visualizer/visualization_panel.cpp
 				   												 src/ogre_visualizer/visualizers/point_cloud_visualizer.cpp
 				   												 src/ogre_visualizer/visualizers/laser_scan_visualizer.cpp
 				   												 src/ogre_visualizer/visualizers/robot_model_visualizer.cpp
+				   												 src/ogre_visualizer/visualizers/planning_visualizer.cpp
 				   												 src/ogre_visualizer/visualizers/octree_visualizer.cpp
  				   												 src/ogre_visualizer/generated/visualization_panel_generated.cpp
  				   												 src/ogre_visualizer/helpers/robot.cpp)
-target_link_libraries(ogrevisualizer ${wxWidgets_LIBRARIES})
+target_link_libraries(ogrevisualizer ${wxWidgets_LIBRARIES} profiler)
 
 rospack_add_executable(visualizer_test src/test/visualizer_test.cpp)
-target_link_libraries(visualizer_test ogrevisualizer ${wxWidgets_LIBRARIES})
+target_link_libraries(visualizer_test ogrevisualizer ${wxWidgets_LIBRARIES} profiler)
 
 rospack_add_executable(marker_test src/test/marker_test.cpp)
  
