Build works for me.  Locked down revision number and removed ROS_BUILD_BLACKLIST.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3888 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/plplot/Makefile
+++ b/3rdparty/plplot/Makefile
@@ -2,6 +2,7 @@ all: build
 
 SVN_DIR = plplot-svn
 SVN_URL = https://plplot.svn.sf.net/svnroot/plplot/trunk 
+SVN_REVISION = -r 8746
 include $(shell rospack find mk)/svn_checkout.mk
 
 CMAKE = `rospack find cmake`/cmake/bin/cmake 
