Install the libs in addition to the binary
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3931 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/wxswig/Makefile
+++ b/3rdparty/wxswig/Makefile
@@ -10,7 +10,7 @@ $(VERSION)/Makefile:
 $(VERSION): $(VERSION)/Makefile
 	cd $(VERSION) && \
 		make && \
-		make install-main
+		make install
 
 wxswig: $(VERSION) 
 
