Depend on the header files instead of the cpp files
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@3963 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/visualization/wx_camera_panel/CMakeLists.txt
+++ b/visualization/wx_camera_panel/CMakeLists.txt
@@ -26,8 +26,8 @@ add_custom_command(OUTPUT   ${SWIG_OUTPUT_CPP_FILE}
                    COMMAND  ${WXSWIG_EXECUTABLE} ${SWIG_FLAGS} -o ${SWIG_OUTPUT_CPP_FILE} -outdir ../lib -module ${PROJECT_NAME} ${SWIG_INTERFACE_FILE}
                    DEPENDS  ${SWIG_INTERFACE_FILE}
                             src/wx_camera_panel/CameraPanelsGenerated.i
-                            src/wx_camera_panel/CameraPanelsGenerated.cpp 
-                            src/wx_camera_panel/CameraPanel.cpp)
+                            src/wx_camera_panel/CameraPanelsGenerated.h 
+                            src/wx_camera_panel/CameraPanel.h)
 
 # shared library
 rospack_add_library(wx_camera_panel src/wx_camera_panel/CameraPanelsGenerated.cpp 
